# bar-none-ultrawide-fixer

./: .gitattributes  .gitignore  .prettierrc.json  LICENSE  README.md  index.html  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: build-linux.yml
branding/: render.mjs
src/: App.vue  main.ts  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/stores/: patcher.js  patcher.ts
src/utils/: hex.js  hex.ts  monitor.ts  settings.ts  theme.ts  update.ts
