[package]
name = "bar-none-ultrawide-fixer"
version = "1.2.0"
description = "A Tauri App"
authors = ["Eddie Cosme"]
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bar_none_ultrawide_fixer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Produces the portable binary as `bar-none.exe`.
[[bin]]
name = "bar-none"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
chrono = "0.4"

# Native icon extraction. Windows reads the icon embedded in the .exe; macOS reads
# the file-type icon. Linux ELF binaries don't embed icons (and Proton .exe icons
# aren't exposed the same way), so the dependency is omitted there and the
# `get_exe_icon` command returns an error the UI already handles gracefully.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
systemicons = "0.9.13"

